--- a/templates_bootstrap/hhparser/contacts.html
+++ b/templates_bootstrap/hhparser/contacts.html
@@ -17,14 +17,14 @@
 <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="#">Your Parser</a>
+      <a class="navbar-brand" href="index.html">Your Parser</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Главная
+            <a class="nav-link" href="index.html">Главная
               <span class="sr-only">(current)</span>
             </a>
           </li>
@@ -32,7 +32,7 @@
             <a class="nav-link" href="form.html">Выбери вакансию</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Результаты поиска</a>
+            <a class="nav-link" href="results.html">Результаты поиска</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="contacts.html">Мы всегда вам рады</a>
